Fix folder collapse css
fixes #720

--- a/css/bookmarks.css
+++ b/css/bookmarks.css
@@ -89,6 +89,10 @@
 	max-height: 9999px;
 }
 
+#app-navigation ul > li > ul > li.collapsible .collapse {
+	left: 44px;
+}
+
 #app-navigation .app-navigation-entry-menu {
 	top: 40px;
 }
